[gd_scene load_steps=35 format=3 uid="uid://c313gchwqrufe"]

[ext_resource type="Script" path="res://Scenes/levels.gd" id="1_idf3a"]
[ext_resource type="Texture2D" uid="uid://bwf622ag1r58g" path="res://Assets/Stages/Lvl_1.png" id="2_7rq0f"]
[ext_resource type="Texture2D" uid="uid://p7b1bowf1r3c" path="res://Assets/Units/Placeholder_Texture.png" id="3_u375n"]
[ext_resource type="Texture2D" uid="uid://b4gw2tkoyubip" path="res://Assets/Units/Block.png" id="4_0w4fm"]
[ext_resource type="Texture2D" uid="uid://bpk0j4onkrtgn" path="res://Assets/UIs/Tip1.png" id="5_wqq1p"]
[ext_resource type="Texture2D" uid="uid://drr6my567k76l" path="res://Assets/UIs/Pop-Up_MoveTut.png" id="7_u6hbp"]
[ext_resource type="PackedScene" uid="uid://7w0aigtov2ae" path="res://Units/main_character.tscn" id="8_ah1f2"]
[ext_resource type="Texture2D" uid="uid://bsfbw7rggoyip" path="res://Assets/UIs/Pop-Up_ResetTut.png" id="8_h7mw4"]
[ext_resource type="Texture2D" uid="uid://bgxj2ldw7pksi" path="res://Assets/StartingStuff/Booting_Screen.png" id="9_vc3u3"]
[ext_resource type="Texture2D" uid="uid://dpxbslke2vh38" path="res://Assets/StartingStuff/Blink.png" id="10_gwynl"]
[ext_resource type="Texture2D" uid="uid://dscqd8naf3cch" path="res://Assets/UIs/Toolbar.png" id="13_kfhfm"]
[ext_resource type="Texture2D" uid="uid://nn6ur3mwwt34" path="res://Assets/UIs/Button_Block.png" id="14_vl44r"]
[ext_resource type="Texture2D" uid="uid://dttq3hm2p6vyt" path="res://Assets/UIs/Button_Ball.png" id="15_fr0th"]
[ext_resource type="Texture2D" uid="uid://c6xyv56aqipl4" path="res://Assets/UIs/Button_Plank.png" id="16_8qr2s"]
[ext_resource type="Texture2D" uid="uid://cd0turrrxqbo2" path="res://Assets/UIs/Button_Reset.png" id="17_gjtb4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fiq2t"]
texture = ExtResource("3_u375n")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ryny2"]
texture = ExtResource("4_0w4fm")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_8fdc0"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_fiq2t")
sources/1 = SubResource("TileSetAtlasSource_ryny2")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hlg5k"]
a = Vector2(0, 360)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lweuo"]
size = Vector2(640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s4a8"]
atlas = ExtResource("9_vc3u3")
region = Rect2(400, 0, 400, 216)

[sub_resource type="AtlasTexture" id="AtlasTexture_1idqe"]
atlas = ExtResource("10_gwynl")
region = Rect2(0, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd2rv"]
atlas = ExtResource("10_gwynl")
region = Rect2(640, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_45hq4"]
atlas = ExtResource("10_gwynl")
region = Rect2(1280, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_345fv"]
atlas = ExtResource("10_gwynl")
region = Rect2(1920, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu5fy"]
atlas = ExtResource("10_gwynl")
region = Rect2(2560, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kl0h"]
atlas = ExtResource("10_gwynl")
region = Rect2(3200, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_88763"]
atlas = ExtResource("10_gwynl")
region = Rect2(3200, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6pe5"]
atlas = ExtResource("10_gwynl")
region = Rect2(2560, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s4ph"]
atlas = ExtResource("10_gwynl")
region = Rect2(1920, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s2gn"]
atlas = ExtResource("10_gwynl")
region = Rect2(1280, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihsly"]
atlas = ExtResource("10_gwynl")
region = Rect2(640, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp14m"]
atlas = ExtResource("10_gwynl")
region = Rect2(0, 0, 640, 360)

[sub_resource type="SpriteFrames" id="SpriteFrames_kg7ui"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s4a8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1idqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd2rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45hq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_345fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5fy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kl0h")
}],
"loop": false,
"name": &"Blink-Close",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88763")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6pe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s4ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s2gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihsly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp14m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s4a8")
}],
"loop": false,
"name": &"Blink-Open",
"speed": 12.0
}]

[node name="Levels" type="Node2D"]
script = ExtResource("1_idf3a")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Stage" type="Sprite2D" parent="StaticBody2D"]
visible = false
position = Vector2(320, 180)
texture = ExtResource("2_7rq0f")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_8fdc0")
format = 2
layer_0/name = "Background"
layer_1/name = "Terrain"
layer_1/tile_data = PackedInt32Array(1376256, 65537, 2, 1179648, 65537, 0, 1245184, 65537, 2, 1310720, 65537, 2, 1179687, 65537, 0, 1245223, 65537, 2, 1310759, 65537, 2, 1376295, 65537, 2, 1376294, 65537, 2, 1376293, 65537, 2, 1376292, 65537, 2, 1376291, 65537, 2, 1376290, 65537, 2, 1376289, 65537, 2, 1376288, 65537, 2, 1376287, 65537, 2, 1376286, 65537, 2, 1376285, 65537, 2, 1376284, 65537, 2, 1376283, 65537, 2, 1376282, 65537, 2, 1376281, 65537, 2, 1376280, 65537, 2, 1376279, 65537, 2, 1376278, 65537, 2, 1376277, 65537, 2, 1376276, 65537, 2, 1376275, 65537, 2, 1376274, 65537, 2, 1376273, 65537, 2, 1376272, 65537, 2, 1376271, 65537, 2, 1376270, 65537, 2, 1376269, 65537, 2, 1376268, 65537, 2, 1376267, 65537, 2, 1376266, 65537, 2, 1376265, 65537, 2, 1376264, 65537, 2, 1376263, 65537, 2, 1376262, 65537, 2, 1376261, 65537, 2, 1376260, 65537, 2, 1376259, 65537, 2, 1376258, 65537, 2, 1179649, 65537, 0, 1179650, 65537, 0, 1179651, 65537, 0, 1179652, 65537, 0, 1179653, 65537, 0, 1179654, 65537, 0, 1179655, 65537, 0, 1179656, 65537, 0, 1179657, 65537, 0, 1179658, 65537, 0, 1179659, 65537, 0, 1179660, 65537, 0, 1179661, 65537, 0, 1179662, 65537, 0, 1179663, 65537, 0, 1179664, 65537, 0, 1179665, 65537, 0, 1179666, 65537, 0, 1179667, 65537, 0, 1179668, 65537, 0, 1179669, 65537, 0, 1179670, 65537, 0, 1179671, 65537, 0, 1179672, 65537, 0, 1179673, 65537, 0, 1179674, 65537, 0, 1179675, 65537, 0, 1179676, 65537, 0, 1179677, 65537, 0, 1179678, 65537, 0, 1179679, 65537, 0, 1179680, 65537, 0, 1179681, 65537, 0, 1179682, 65537, 0, 1179683, 65537, 0, 1179684, 65537, 0, 1179685, 65537, 0, 1179686, 65537, 0, 1376257, 65537, 2, 1310732, 65537, 1, 1245196, 65537, 1, 1245195, 65537, 1, 1245194, 65537, 1, 1245193, 65537, 1, 1245192, 65537, 1, 1245191, 65537, 1, 1245190, 65537, 1, 1245189, 65537, 1, 1245188, 65537, 1, 1245187, 65537, 1, 1245186, 65537, 1, 1245185, 65537, 1, 1310721, 65537, 1, 1310722, 65537, 1, 1310723, 65537, 1, 1310724, 65537, 1, 1310725, 65537, 1, 1310726, 65537, 1, 1310727, 65537, 1, 1310728, 65537, 1, 1310729, 65537, 1, 1310730, 65537, 1, 1310731, 65537, 1, 1245197, 65537, 1, 1310733, 65537, 1, 1310734, 65537, 1, 1245198, 65537, 1, 1245199, 65537, 1, 1310735, 65537, 1, 1310736, 65537, 1, 1245200, 65537, 1, 1245201, 65537, 1, 1310737, 65537, 1, 1310738, 65537, 1, 1245202, 65537, 1, 1245203, 65537, 1, 1310739, 65537, 1, 1310740, 65537, 1, 1245204, 65537, 1, 1245205, 65537, 1, 1310741, 65537, 1, 1310742, 65537, 1, 1245206, 65537, 1, 1245207, 65537, 1, 1310743, 65537, 1, 1310744, 65537, 1, 1245208, 65537, 1, 1245209, 65537, 1, 1310745, 65537, 1, 1310746, 65537, 1, 1245210, 65537, 1, 1245211, 65537, 1, 1310747, 65537, 1, 1310748, 65537, 1, 1245212, 65537, 1, 1245213, 65537, 1, 1310749, 65537, 1, 1310750, 65537, 1, 1245214, 65537, 1, 1245215, 65537, 1, 1310751, 65537, 1, 1310752, 65537, 1, 1245216, 65537, 1, 1245217, 65537, 1, 1310753, 65537, 1, 1310754, 65537, 1, 1245218, 65537, 1, 1245219, 65537, 1, 1310755, 65537, 1, 1310756, 65537, 1, 1245220, 65537, 1, 1245221, 65537, 1, 1310757, 65537, 1, 1310758, 65537, 1, 1245222, 65537, 1, 1441812, 65537, 2, 1441813, 65537, 2, 1441814, 65537, 2, 1441815, 65537, 2, 1441816, 65537, 2, 1441817, 65537, 2, 1441818, 65537, 2, 1441819, 65537, 2, 1441820, 65537, 2, 1441821, 65537, 2, 1441822, 65537, 2, 1441823, 65537, 2, 1441824, 65537, 2, 1441825, 65537, 2, 1441826, 65537, 2, 1441827, 65537, 2, 1441828, 65537, 2, 1441829, 65537, 2, 1441830, 65537, 2, 1441793, 65537, 2, 1441794, 65537, 2, 1441795, 65537, 2, 1441796, 65537, 2, 1441797, 65537, 2, 1441798, 65537, 2, 1441799, 65537, 2, 1441800, 65537, 2, 1441801, 65537, 2, 1441802, 65537, 2, 1441803, 65537, 2, 1441804, 65537, 2, 1441805, 65537, 2, 1441806, 65537, 2, 1441807, 65537, 2, 1441808, 65537, 2, 1441809, 65537, 2, 1441810, 65537, 2, 1441811, 65537, 2, 1441831, 65537, 2, 1441792, 65537, 2, 1179688, 65537, 0, 1245224, 65537, 2, 1310760, 65537, 2, 1376296, 65537, 2, 1441832, 65537, 2, 1179689, 65537, 0, 1245225, 65537, 1, 1310761, 65537, 1, 1376297, 65537, 2, 1441833, 65537, 2, 1179690, 65537, 0, 1245226, 65537, 1, 1310762, 65537, 1, 1376298, 65537, 2, 1441834, 65537, 2, 1179691, 65537, 0, 1245227, 65537, 1, 1310763, 65537, 1, 1376299, 65537, 2, 1441835, 65537, 2, 1179692, 65537, 0, 1245228, 65537, 1, 1310764, 65537, 1, 1376300, 65537, 2, 1441836, 65537, 2, 1179693, 65537, 0, 1245229, 65537, 1, 1310765, 65537, 1, 1376301, 65537, 2, 1441837, 65537, 2, 1179694, 65537, 0, 1245230, 65537, 1, 1310766, 65537, 1, 1376302, 65537, 2, 1441838, 65537, 2, 1179695, 65537, 0, 1245231, 65537, 1, 1310767, 65537, 1, 1376303, 65537, 2, 1441839, 65537, 2, 1179696, 65537, 0, 1245232, 65537, 1, 1310768, 65537, 1, 1376304, 65537, 2, 1441840, 65537, 2, 1179697, 65537, 0, 1245233, 65537, 1, 1310769, 65537, 1, 1376305, 65537, 2, 1441841, 65537, 2, 1179698, 65537, 0, 1245234, 65537, 1, 1310770, 65537, 1, 1376306, 65537, 2, 1441842, 65537, 2, 1179699, 65537, 0, 1245235, 65537, 1, 1310771, 65537, 1, 1376307, 65537, 2, 1441843, 65537, 2, 1179700, 65537, 0, 1245236, 65537, 1, 1310772, 65537, 1, 1376308, 65537, 2, 1441844, 65537, 2, 1179701, 65537, 0, 1245237, 65537, 1, 1310773, 65537, 1, 1376309, 65537, 2, 1441845, 65537, 2, 1179702, 65537, 0, 1245238, 65537, 1, 1310774, 65537, 1, 1376310, 65537, 2, 1441846, 65537, 2, 1179703, 65537, 0, 1245239, 65537, 1, 1310775, 65537, 1, 1376311, 65537, 2, 1441847, 65537, 2, 1179704, 65537, 0, 1245240, 65537, 1, 1310776, 65537, 1, 1376312, 65537, 2, 1441848, 65537, 2, 1179705, 65537, 0, 1245241, 65537, 1, 1310777, 65537, 1, 1376313, 65537, 2, 1441849, 65537, 2, 1179706, 65537, 0, 1245242, 65537, 1, 1310778, 65537, 1, 1376314, 65537, 2, 1441850, 65537, 2, 1179707, 65537, 0, 1245243, 65537, 1, 1310779, 65537, 1, 1376315, 65537, 2, 1441851, 65537, 2, 1179708, 65537, 0, 1245244, 65537, 1, 1310780, 65537, 1, 1376316, 65537, 2, 1441852, 65537, 2, 1179709, 65537, 0, 1245245, 65537, 1, 1310781, 65537, 1, 1376317, 65537, 2, 1441853, 65537, 2, 1179710, 65537, 0, 1245246, 65537, 1, 1310782, 65537, 1, 1376318, 65537, 2, 1441854, 65537, 2, 1179711, 65537, 0, 1245247, 65537, 1, 1310783, 65537, 1, 1376319, 65537, 2, 1441855, 65537, 2, 1179712, 65537, 0, 1245248, 65537, 1, 1310784, 65537, 1, 1376320, 65537, 2, 1441856, 65537, 2, 1179713, 65537, 0, 1245249, 65537, 1, 1310785, 65537, 1, 1376321, 65537, 2, 1441857, 65537, 2, 1179714, 65537, 0, 1245250, 65537, 1, 1310786, 65537, 1, 1376322, 65537, 2, 1441858, 65537, 2, 1179715, 65537, 0, 1245251, 65537, 1, 1310787, 65537, 1, 1376323, 65537, 2, 1441859, 65537, 2, 1179716, 65537, 0, 1245252, 65537, 1, 1310788, 65537, 1, 1376324, 65537, 2, 1441860, 65537, 2, 1179717, 65537, 0, 1245253, 65537, 1, 1310789, 65537, 1, 1376325, 65537, 2, 1441861, 65537, 2, 1179718, 65537, 0, 1245254, 65537, 1, 1310790, 65537, 1, 1376326, 65537, 2, 1441862, 65537, 2, 1179719, 65537, 0, 1245255, 65537, 1, 1310791, 65537, 1, 1376327, 65537, 2, 1441863, 65537, 2, 1179720, 65537, 0, 1245256, 65537, 1, 1310792, 65537, 1, 1376328, 65537, 2, 1441864, 65537, 2, 1179721, 65537, 0, 1245257, 65537, 1, 1310793, 65537, 1, 1376329, 65537, 2, 1441865, 65537, 2, 1179722, 65537, 0, 1245258, 65537, 1, 1310794, 65537, 1, 1376330, 65537, 2, 1441866, 65537, 2, 1179723, 65537, 0, 1245259, 65537, 1, 1310795, 65537, 1, 1376331, 65537, 2, 1441867, 65537, 2, 1179724, 65537, 0, 1245260, 65537, 1, 1310796, 65537, 1, 1376332, 65537, 2, 1441868, 65537, 2, 1179725, 65537, 0, 1245261, 65537, 1, 1310797, 65537, 1, 1376333, 65537, 2, 1441869, 65537, 2, 1179726, 65537, 0, 1245262, 65537, 1, 1310798, 65537, 1, 1376334, 65537, 2, 1441870, 65537, 2, 1179727, 65537, 0, 1245263, 65537, 2, 1310799, 65537, 2, 1376335, 65537, 2, 1441871, 65537, 2, 458817, 1, 0, 458819, 196609, 0, 458818, 65537, 0, 1114177, 1, 1, 1048641, 1, 1, 983105, 1, 1, 917569, 1, 1, 852033, 1, 1, 786497, 1, 1, 720961, 1, 1, 655425, 1, 1, 589889, 1, 1, 524353, 1, 1, 1114179, 196609, 1, 1048643, 196609, 1, 983107, 196609, 1, 917571, 196609, 1, 852035, 196609, 1, 786499, 196609, 1, 720963, 196609, 1, 655427, 196609, 1, 589891, 196609, 1, 524355, 196609, 1, 1114178, 65537, 1, 1048642, 65537, 1, 983106, 65537, 1, 917570, 65537, 1, 852034, 65537, 1, 786498, 65537, 1, 720962, 65537, 1, 655426, 65537, 1, 589890, 65537, 1, 524354, 65537, 1)

[node name="Tip1" type="Sprite2D" parent="."]
position = Vector2(166, 94)
texture = ExtResource("5_wqq1p")

[node name="Pop-upMoveTut" type="Sprite2D" parent="."]
position = Vector2(262, 158)
texture = ExtResource("7_u6hbp")

[node name="Pop-upBlockTut" type="Sprite2D" parent="."]
position = Vector2(744, 114)
texture = ExtResource("7_u6hbp")

[node name="Pop-upResetTut" type="Sprite2D" parent="."]
position = Vector2(912, 98)
texture = ExtResource("8_h7mw4")

[node name="MainCharacter" parent="." instance=ExtResource("8_ah1f2")]
position = Vector2(58, 255)

[node name="LevelCamera" type="Camera2D" parent="."]
position = Vector2(320, 180)

[node name="StaticBody2D" type="StaticBody2D" parent="LevelCamera"]
position = Vector2(0, -6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelCamera/StaticBody2D"]
position = Vector2(-320, -184)
shape = SubResource("SegmentShape2D_hlg5k")

[node name="Area2D" type="Area2D" parent="LevelCamera"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelCamera/Area2D"]
shape = SubResource("RectangleShape2D_lweuo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ToolBox" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(320, 181)
texture = ExtResource("13_kfhfm")

[node name="Block" type="TextureButton" parent="CanvasLayer"]
visible = false
offset_left = 4.0
offset_top = 105.0
offset_right = 44.0
offset_bottom = 145.0
focus_mode = 0
texture_normal = ExtResource("14_vl44r")

[node name="Ball" type="TextureButton" parent="CanvasLayer"]
visible = false
offset_left = 4.0
offset_top = 145.0
offset_right = 44.0
offset_bottom = 185.0
focus_mode = 0
texture_normal = ExtResource("15_fr0th")

[node name="Plank" type="TextureButton" parent="CanvasLayer"]
visible = false
offset_left = 4.0
offset_top = 185.0
offset_right = 44.0
offset_bottom = 225.0
focus_mode = 0
texture_normal = ExtResource("16_8qr2s")

[node name="Reset" type="TextureButton" parent="CanvasLayer"]
visible = false
offset_left = 4.0
offset_top = 225.0
offset_right = 44.0
offset_bottom = 265.0
focus_mode = 0
texture_normal = ExtResource("17_gjtb4")

[node name="Blink" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(320, 180)
sprite_frames = SubResource("SpriteFrames_kg7ui")
animation = &"Blink-Close"

[connection signal="area_exited" from="LevelCamera/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="button_down" from="CanvasLayer/Block" to="." method="_on_box_button_down"]
[connection signal="button_down" from="CanvasLayer/Ball" to="." method="_on_ball_button_down"]
[connection signal="button_down" from="CanvasLayer/Plank" to="." method="_on_plank_button_down"]
[connection signal="button_down" from="CanvasLayer/Reset" to="." method="_on_reset_button_down"]
